unpackaged/main/default/objects/CLT_Email_Template__c/CLT_Email_Template__c.object-meta.xml
<CustomObject>
    <label>CLT Email Template</label>
    <nameField>
        <label>CLT Email Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CLT Email Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>