unpackaged/main/default/objects/CLT_Email_Template__c/fields/Email_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Id__c</fullName>
    <externalId>true</externalId>
    <label>Email Template Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>