unpackaged/main/default/objects/CLT_Email_Template__c/fields/Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Folder_Name__c</fullName>
    <label>Folder Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>