unpackaged/main/default/objects/CLT_Email_Template__c/fields/JSON__c.field-meta.xml
<CustomField>
    <fullName>JSON__c</fullName>
    <label>JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>