unpackaged/main/default/objects/CLT_Email_Template__c/fields/PersonalizedTemplate__c.field-meta.xml
<CustomField>
    <fullName>PersonalizedTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personalized Template?</label>
    <type>Checkbox</type>
</CustomField>