unpackaged/main/default/objects/CLT_Email_Template__c/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <label>Signature</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>