unpackaged/main/default/objects/CLT_Email_Template__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CLT_Email_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>